Added Some More Pages in theme

--- a/public/frontend/css/style.css
+++ b/public/frontend/css/style.css
@@ -8128,7 +8128,7 @@ select.is-invalid {
 
 .text-white {
   --bs-text-opacity: 1;
-  color: rgba(var(--bs-white-rgb), var(--bs-text-opacity)) !important; }
+  color: rgba(var(--bs-white-rgb), var(--bs-text-opacity)) }
 
 .text-body {
   --bs-text-opacity: 1;
