--- a/public/frontend/css/custom.css
+++ b/public/frontend/css/custom.css
@@ -862,7 +862,6 @@ hr.hr-content {
 
 .form-item-ck input,.form-item-ck .input textarea,.form-item-ck  select
 {
-    font-family: 'AdelleSansW01-Regular' !important;
     padding: 10px;
     border-radius: 5px;
     border: 1px solid transparent;
@@ -871,6 +870,7 @@ hr.hr-content {
     margin-bottom: 10px;
     outline: none;
     width: 100%;
+    appearance: auto;
 }
 .form-item-ck .input textarea
 {
@@ -1347,6 +1347,15 @@ h3{font-size:13px;}
 .visible-lg, .visible-md, .visible-sm, .visible-xs {
     display: none !important;
 }
+.checkbox-row .col-md-8,
+.checkbox-row .col-sm-4 {
+    float: left;
+    padding-left: 15px;
+    padding-right: 15px;
+}
+.checkbox-row {
+    margin-bottom: 50px;
+}
 @media (max-width: 786px) {
 	.ro-none.row
 	{
@@ -1486,6 +1495,8 @@ h3{font-size:13px;}
     .row.cart-row {
         display: block;
     }
+    .checkbox-row > .col-md-8,
+    .checkbox-row > .col-sm-4,
     .cart-row > .col-sm-12,
     .cart-row > .col-xs-12 {
         width: 100%;
@@ -1494,10 +1505,17 @@ h3{font-size:13px;}
         float: left;
         margin-top: 100px;
     }
+    .checkbox-row {
+        margin-top: 15px;
+    }
 }
 @media (max-width: 767px) {
     .hidden-xs {
         display: none !important;
+    }
+    .checkbox-row .col-xs-12.col-md-8,
+    .checkbox-row .col-sm-4  {
+        padding-inline: 0px;
     }
 }
 @media (max-width: 480px) {
