--- a/public/frontend/scss/abstract/_variable.scss
+++ b/public/frontend/scss/abstract/_variable.scss
@@ -3,7 +3,7 @@ $enable-deprecation-messages: false;
 $ignore-warning             : true;
 
 // Color
-$primary   : #38996E;
+$primary   : #002d59;
 $secondary : #2D2E2F !default;
 $success   : #31A56D !default;
 $info      : #0194D9 !default;
