--- a/public/frontend/scss/components/shop/_shop-1.scss
+++ b/public/frontend/scss/components/shop/_shop-1.scss
@@ -1587,7 +1587,7 @@
 				}
 				.offer {
 					padding: 5px 20px;
-					background: #38996E;
+					background: #002d59;
 					font-family: var(--font-family-title);
 					font-size: 16px;
 					color: #fff;
