--- a/public/frontend/scss/pages/_shop-checkout.scss
+++ b/public/frontend/scss/pages/_shop-checkout.scss
@@ -50,7 +50,7 @@
 						.toggle-close{
 							&:after {
 								content:"\f107";
-								color: #38996E;
+								color: #002d59;
 							}
 						}
 					}
