--- a/public/frontend/css/common.css
+++ b/public/frontend/css/common.css
@@ -54,65 +54,23 @@ section {
 
 /* fonts */
 @font-face {
-  font-family: "Calluna-Light";
-  src: url("fonts/Calluna-Light.eot?#iefix") format("embedded-opentype"),
-    url("fonts/Calluna-Light.otf") format("opentype"),
-    url("fonts/Calluna-Light.woff") format("woff"),
-    url("fonts/Calluna-Light.ttf") format("truetype"),
-    url("fonts/Calluna-Light.svg#Calluna-Light") format("svg");
-  font-weight: normal;
-  font-style: normal;
-}
-@font-face {
-  font-family: "Calluna-Regular";
-  src: url("fonts/Calluna-Regular.eot") format("embedded-opentype"),
-    url("fonts/Calluna-Regular.otf") format("opentype"),
-    url("fonts/Calluna-Regular.woff") format("woff"),
-    url("fonts/Calluna-Regular.svg") format("svg");
-  font-weight: normal;
-  font-style: normal;
-}
-@font-face {
   font-family: "AdelleSansW01-Bold";
-  src: url("fonts/AdelleSansW01-Bold.eot?#iefix") format("embedded-opentype"),
-    url("fonts/AdelleSansW01-Bold.woff") format("woff"),
-    url("fonts/AdelleSansW01-Bold.ttf") format("truetype"),
-    url("fonts/AdelleSansW01-Bold.svg#AdelleSansW01-Bold") format("svg");
+  src: url('../fonts/adelle-sans/AdelleSansW01-Bold.woff2') format('woff2'),
+    url('fonts/adelle-sans/AdelleSansW01-Bold.woff') format('woff');
   font-weight: normal;
   font-style: normal;
 }
 @font-face {
-  font-family: "AdelleSansW01-light";
-  src: url("fonts/AdelleSansW01-light.eot?#iefix") format("embedded-opentype"),
-    url("fonts/AdelleSansW01-Light.woff") format("woff"),
-    url("fonts/AdelleSansW01-light.svg#AdelleSansW01-light") format("svg");
+  font-family: "AdelleSansW01-Light";
+  src: url('../fonts/adelle-sans/AdelleSansW01-Light.woff2') format('woff2'),
+    url('fonts/adelle-sans/AdelleSansW01-Light.woff') format('woff');
   font-weight: normal;
   font-style: normal;
 }
 @font-face {
   font-family: "AdelleSansW01-Regular";
-  src: url("fonts/AdelleSansW01-Regular.eot?#iefix") format("embedded-opentype"),
-    url("fonts/AdelleSansW01-Regular.woff") format("woff"),
-    url("fonts/AdelleSansW01-Regular.ttf") format("truetype"),
-    url("fonts/AdelleSansW01-Regular.svg#AdelleSansW01-Regular") format("svg");
-  font-weight: normal;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: "opensans-Regular";
-  src: url("fonts/OpenSans-Regular.eot") format("embedded-opentype"),
-    url("fonts/OpenSans-Regular.woff") format("woff"),
-    url("fonts/OpenSans-Regular.ttf") format("truetype");
-  font-weight: normal;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: "opensans-light";
-  src: url("fonts/OpenSans-Light.eot") format("embedded-opentype"),
-    url("fonts/OpenSans-Light.woff") format("woff"),
-    url("fonts/OpenSans-Light.ttf") format("truetype");
+  src: url('../fonts/adelle-sans/AdelleSansW01-Regular.woff2') format('woff2'),
+    url('fonts/adelle-sans/AdelleSansW01-Regular.woff') format('woff');
   font-weight: normal;
   font-style: normal;
 }
@@ -132,10 +90,13 @@ section {
   background-color: #d3d3d3;
 }
 .bg-darkred {
-  background-color: #b11230;
+  background-color: #002d59;
 }
 .text-darkred {
-  color: #b11230;
+  color: #002d59;
+}
+.total-contain:hover .total-detail a {
+  color: #fff;
 }
 .text-grey {
   color: #868686;
@@ -154,7 +115,9 @@ section {
 }
 
 /* Colors */
-
+.account-card p {
+  font-size: 15px;
+}
 p {
   margin-top: 0;
   margin-bottom: 10px;
@@ -179,12 +142,14 @@ img {
   vertical-align: middle;
   border: 0;
 }
-
+.account-sidebar .account-nav ul li a {
+  font-size: 15px;
+}
 .CallunaLight {
-  font-family: "Calluna-Light";
+  font-family: "AdelleSansW01-Light";
 }
 .CallunaRegular {
-  font-family: "Calluna-Regular";
+  font-family: "AdelleSansW01-Regular";
 }
 
 .AdelleSansRegular {
@@ -198,23 +163,23 @@ img {
 }
 
 .opensans {
-  font-family: "opensans-Regular";
+  font-family: "AdelleSansW01-Regular";
 }
 .AdelleSan-Bold-Opensans {
-  font-family: "AdelleSansW01-Bold", "Open Sans", sans-serif;
+  font-family: "AdelleSansW01-Bold";
 }
 .AdelleSan-Light-Opensans {
-  font-family: "AdelleSansW01-Light", "Open Sans", sans-serif;
+  font-family: "AdelleSansW01-Light";
 }
 
 .CallunaLight-Opensans {
-  font-family: "Calluna-Light", "Open Sans", sans-serif;
+  font-family: "AdelleSansW01-Light";
 }
 .CallunaReguler-Opensans {
-  font-family: "Calluna-Light", "Open Sans", sans-serif;
+  font-family: "AdelleSansW01-Light";
 }
 .AdelleSan-Regular-Opensans {
-  font-family: "AdelleSansW01-Regular", "Open Sans", sans-serif;
+  font-family: "AdelleSansW01-Regular";
 }
 /* headings, sub-headings, Paragraph end */
 
