--- a/public/frontend/css/header-footer.css
+++ b/public/frontend/css/header-footer.css
@@ -22,7 +22,7 @@
 
 .red-btn,
 .red-btn:hover {
-    background-color: #b11230 !important;
+    background-color: #002d59 !important;
 }
 .cart-count-badge {
     position: absolute;
