--- a/public/frontend/css/style.css
+++ b/public/frontend/css/style.css
@@ -21,7 +21,7 @@
 :root {
   --gradient: linear-gradient(to right, rgb(255, 64, 62) 0%, rgb(255, 129, 27) 100%);
   --gradient-sec: linear-gradient(to right, rgb(57, 26, 166) 0%, rgb(6, 163, 245) 100%);
-  --primary: #38996E;
+  --primary: #002d59;
   --secondary: #2D2E2F;
   --dark-shade: #000;
   --bg-primary-light: #edf8f3;
@@ -38,11 +38,11 @@
   --rgba-primary-7: rgba(56, 153, 110, 0.7);
   --rgba-primary-8: rgba(56, 153, 110, 0.8);
   --rgba-primary-9: rgba(56, 153, 110, 0.9);
-  --font-family-base: Lufga, sans-serif;
+  --font-family-base: "AdelleSansW01-Regular";
   --grey: #f7f7f7;
   --border-radius-base: 6px;
   --border-color: #cbcbcb;
-  --font-family-title: Marcellus, sans-serif;
+  --font-family-title: "AdelleSansW01-Bold";
   --title: #2D2E2F;
   --headings-font-weight: 400;
   --headings-font-weight2: 400;
@@ -67,7 +67,7 @@
   --bs-gray-700: #495057;
   --bs-gray-800: #343a40;
   --bs-gray-900: #212529;
-  --bs-primary: #38996E;
+  --bs-primary: #002d59;
   --bs-secondary: #2D2E2F;
   --bs-success: #31A56D;
   --bs-info: #0194D9;
@@ -112,7 +112,7 @@
   --bs-font-sans-serif: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", "Noto Sans", "Liberation Sans", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   --bs-font-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
   --bs-gradient: linear-gradient(180deg, rgba(255, 255, 255, 0.15), rgba(255, 255, 255, 0));
-  --bs-body-font-family: "Lufga", sans-serif;
+  --bs-body-font-family: "AdelleSansW01-Regular";
   --bs-body-font-size: 1rem;
   --bs-body-font-weight: 400;
   --bs-body-line-height: 1.6;
@@ -131,7 +131,7 @@
   --bs-tertiary-bg: #f8f9fa;
   --bs-tertiary-bg-rgb: 248, 249, 250;
   --bs-heading-color: #2D2E2F;
-  --bs-link-color: #38996E;
+  --bs-link-color: #002d59;
   --bs-link-color-rgb: 56, 153, 110;
   --bs-link-decoration: underline;
   --bs-link-hover-color: #2d7a58;
@@ -3024,8 +3024,8 @@ select:-moz-focusring {
 }
 
 .form-check-input:checked {
-  background-color: #38996E;
-  border-color: #38996E;
+  background-color: #002d59;
+  border-color: #002d59;
 }
 
 .form-check-input:checked[type="checkbox"] {
@@ -3037,8 +3037,8 @@ select:-moz-focusring {
 }
 
 .form-check-input[type="checkbox"]:indeterminate {
-  background-color: #38996E;
-  border-color: #38996E;
+  background-color: #002d59;
+  border-color: #002d59;
   --bs-form-check-bg-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 20'%3e%3cpath fill='none' stroke='%23ffffff' stroke-linecap='round' stroke-linejoin='round' stroke-width='3' d='M6 10h8'/%3e%3c/svg%3e");
 }
 
@@ -3165,7 +3165,7 @@ select:-moz-focusring {
   width: 1rem;
   height: 1rem;
   margin-top: -0.25rem;
-  background-color: #38996E;
+  background-color: #002d59;
   border: 0;
   border-radius: 1rem;
   transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
@@ -3195,7 +3195,7 @@ select:-moz-focusring {
 .form-range::-moz-range-thumb {
   width: 1rem;
   height: 1rem;
-  background-color: #38996E;
+  background-color: #002d59;
   border: 0;
   border-radius: 1rem;
   transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
@@ -4588,7 +4588,7 @@ select.is-invalid:focus {
 .woocommerce #place_order {
   --bs-btn-padding-x: 0.75rem;
   --bs-btn-padding-y: 0.375rem;
-  --bs-btn-font-family: ;
+  --bs-btn-font-family: "AdelleSansW01-Regular";
   --bs-btn-font-size: 1rem;
   --bs-btn-font-weight: 400;
   --bs-btn-line-height: 1.6;
@@ -4901,19 +4901,19 @@ fieldset:disabled .woocommerce #place_order,
 .woocommerce input.button,
 .woocommerce #place_order {
   --bs-btn-color: #000;
-  --bs-btn-bg: #38996E;
-  --bs-btn-border-color: #38996E;
+  --bs-btn-bg: #002d59;
+  --bs-btn-border-color: #002d59;
   --bs-btn-hover-color: #000;
-  --bs-btn-hover-bg: #56a884;
-  --bs-btn-hover-border-color: #4ca37d;
+  --bs-btn-hover-bg: #002d59;
+  --bs-btn-hover-border-color: #002d59;
   --bs-btn-focus-shadow-rgb: 48, 130, 94;
   --bs-btn-active-color: #000;
   --bs-btn-active-bg: #60ad8b;
-  --bs-btn-active-border-color: #4ca37d;
+  --bs-btn-active-border-color: #002d59;
   --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
   --bs-btn-disabled-color: #000;
-  --bs-btn-disabled-bg: #38996E;
-  --bs-btn-disabled-border-color: #38996E;
+  --bs-btn-disabled-bg: #002d59;
+  --bs-btn-disabled-border-color: #002d59;
 }
 
 .btn-secondary {
@@ -5037,19 +5037,19 @@ fieldset:disabled .woocommerce #place_order,
 
 .btn-outline-primary,
 .is-style-outline .wp-block-button__link {
-  --bs-btn-color: #38996E;
-  --bs-btn-border-color: #38996E;
+  --bs-btn-color: #002d59;
+  --bs-btn-border-color: #002d59;
   --bs-btn-hover-color: #000;
-  --bs-btn-hover-bg: #38996E;
-  --bs-btn-hover-border-color: #38996E;
+  --bs-btn-hover-bg: #002d59;
+  --bs-btn-hover-border-color: #002d59;
   --bs-btn-focus-shadow-rgb: 56, 153, 110;
   --bs-btn-active-color: #000;
-  --bs-btn-active-bg: #38996E;
-  --bs-btn-active-border-color: #38996E;
+  --bs-btn-active-bg: #002d59;
+  --bs-btn-active-border-color: #002d59;
   --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
-  --bs-btn-disabled-color: #38996E;
+  --bs-btn-disabled-color: #002d59;
   --bs-btn-disabled-bg: transparent;
-  --bs-btn-disabled-border-color: #38996E;
+  --bs-btn-disabled-border-color: #002d59;
   --bs-gradient: none;
 }
 
@@ -5324,7 +5324,7 @@ fieldset:disabled .woocommerce #place_order,
   --bs-dropdown-link-hover-color: var(--bs-body-color);
   --bs-dropdown-link-hover-bg: var(--bs-tertiary-bg);
   --bs-dropdown-link-active-color: #ffffff;
-  --bs-dropdown-link-active-bg: #38996E;
+  --bs-dropdown-link-active-bg: #002d59;
   --bs-dropdown-link-disabled-color: var(--bs-tertiary-color);
   --bs-dropdown-item-padding-x: 1rem;
   --bs-dropdown-item-padding-y: 0.25rem;
@@ -5629,7 +5629,7 @@ fieldset:disabled .woocommerce #place_order,
   --bs-dropdown-divider-bg: var(--bs-border-color-translucent);
   --bs-dropdown-link-hover-bg: rgba(255, 255, 255, 0.15);
   --bs-dropdown-link-active-color: #ffffff;
-  --bs-dropdown-link-active-bg: #38996E;
+  --bs-dropdown-link-active-bg: #002d59;
   --bs-dropdown-link-disabled-color: #adb5bd;
   --bs-dropdown-header-color: #adb5bd;
 }
@@ -6338,7 +6338,7 @@ fieldset:disabled .woocommerce #place_order,
 .nav-pills {
   --bs-nav-pills-border-radius: var(--bs-border-radius);
   --bs-nav-pills-link-active-color: #ffffff;
-  --bs-nav-pills-link-active-bg: #38996E;
+  --bs-nav-pills-link-active-bg: #002d59;
 }
 
 .nav-pills .nav-link {
@@ -7317,8 +7317,8 @@ fieldset:disabled .woocommerce #place_order,
   --bs-pagination-focus-bg: var(--bs-secondary-bg);
   --bs-pagination-focus-box-shadow: 0 0 0 0.25rem rgba(56, 153, 110, 0.25);
   --bs-pagination-active-color: #ffffff;
-  --bs-pagination-active-bg: #38996E;
-  --bs-pagination-active-border-color: #38996E;
+  --bs-pagination-active-bg: #002d59;
+  --bs-pagination-active-border-color: #002d59;
   --bs-pagination-disabled-color: var(--bs-secondary-color);
   --bs-pagination-disabled-bg: var(--bs-secondary-bg);
   --bs-pagination-disabled-border-color: var(--bs-border-color);
@@ -7553,7 +7553,7 @@ fieldset:disabled .woocommerce #place_order,
   --bs-progress-border-radius: var(--bs-border-radius);
   --bs-progress-box-shadow: var(--bs-box-shadow-inset);
   --bs-progress-bar-color: #ffffff;
-  --bs-progress-bar-bg: #38996E;
+  --bs-progress-bar-bg: #002d59;
   --bs-progress-bar-transition: width 0.6s ease;
   display: flex;
   height: var(--bs-progress-height);
@@ -7620,8 +7620,8 @@ fieldset:disabled .woocommerce #place_order,
   --bs-list-group-disabled-color: var(--bs-secondary-color);
   --bs-list-group-disabled-bg: var(--bs-body-bg);
   --bs-list-group-active-color: #ffffff;
-  --bs-list-group-active-bg: #38996E;
-  --bs-list-group-active-border-color: #38996E;
+  --bs-list-group-active-bg: #002d59;
+  --bs-list-group-active-border-color: #002d59;
   display: flex;
   flex-direction: column;
   padding-left: 0;
@@ -8460,7 +8460,7 @@ fieldset:disabled .woocommerce #place_order,
   z-index: var(--bs-tooltip-zindex);
   display: block;
   margin: var(--bs-tooltip-margin);
-  font-family: "Lufga", sans-serif;
+  font-family: "AdelleSansW01-Regular";
   font-style: normal;
   font-weight: 400;
   line-height: 1.6;
@@ -8585,7 +8585,7 @@ fieldset:disabled .woocommerce #place_order,
   z-index: var(--bs-popover-zindex);
   display: block;
   max-width: var(--bs-popover-max-width);
-  font-family: "Lufga", sans-serif;
+  font-family: "AdelleSansW01-Regular";
   font-style: normal;
   font-weight: 400;
   line-height: 1.6;
@@ -15951,7 +15951,7 @@ a:hover {
 }
 
 .text-primary {
-  color: #b11230 !important;
+  color: #002d59 !important;
 }
 
 .text-secondary {
@@ -16431,7 +16431,7 @@ strong,
   text-transform: uppercase;
   margin-top: 18px;
   font-weight: 700;
-  font-family: "DM Sans", sans-serif;
+  font-family: "AdelleSansW01-Regular";
   display: block;
   margin-right: auto;
   margin-left: auto;
@@ -16480,7 +16480,7 @@ strong,
   bottom: 0;
   margin: auto;
   border: 2px solid;
-  border-color: transparent #38996E #38996E;
+  border-color: transparent #002d59 #002d59;
   width: 24px;
   height: 24px;
   border-radius: 50%;
@@ -22860,7 +22860,7 @@ select.btn-group .dropdown-toggle .caret:before {
 
 .shop-form .form-group .input-group-addon .coupon {
   color: #24262B;
-  font-family: 'DM Sans';
+  font-family: "AdelleSansW01-Regular";
   font-weight: 700;
   padding: 10px 15px;
   font-size: 15px;
@@ -25394,7 +25394,7 @@ btn:focus {
   font-weight: 500;
   position: relative;
   text-transform: capitalize;
-  font-family: "Lufga", sans-serif;
+  font-family: "AdelleSansW01-Regular";
   align-items: center;
   overflow: hidden;
   z-index: 1;
@@ -28053,7 +28053,7 @@ btn:focus {
 .dz-accordion .accordion-header .accordion-button span {
   font-size: 15px;
   font-weight: 500;
-  color: #38996E;
+  color: #002d59;
 }
 
 .dz-accordion .accordion-header .accordion-button:after {
@@ -39705,7 +39705,7 @@ video#video-background {
 
 .product-box.style-1 .product-content .offer {
   padding: 5px 20px;
-  background: #38996E;
+  background: #002d59;
   font-family: var(--font-family-title);
   font-size: 16px;
   color: #fff;
@@ -51474,7 +51474,7 @@ body .working-location img {
 
 .shop-checkout .dz-accordion .accordion-item .accordion-header .accordion-button.collapsed .toggle-close:after {
   content: "\f107";
-  color: #38996E;
+  color: #002d59;
 }
 
 @media only screen and (max-width: 575px) {
@@ -57432,7 +57432,7 @@ table.wishlist_table {
 }
 
 .toggle-btn {
-  background-color: #38996E;
+  background-color: #002d59;
   padding: 10px 15px;
   color: #fff !important;
 }
@@ -57835,11 +57835,11 @@ table.wishlist_table {
 }
 
 .widget-timeline .timeline>li>.timeline-badge.primary {
-  border-color: #38996E;
+  border-color: #002d59;
 }
 
 .widget-timeline .timeline>li>.timeline-badge.primary:after {
-  background: #38996E;
+  background: #002d59;
 }
 
 .widget-timeline .timeline>li>.timeline-badge.success {
@@ -57998,7 +57998,7 @@ table.wishlist_table {
 }
 
 .total-contain:hover {
-  background-color: #b11230;
+  background-color: #002d59;
 }
 
 .total-contain:hover .total-detail .title,
