--- a/public/frontend/scss/components/_accordion.scss
+++ b/public/frontend/scss/components/_accordion.scss
@@ -29,7 +29,7 @@
 			span{
 				font-size: 15px;
 				font-weight: 500;
-				color: #38996E;
+				color: #002d59;
 			}
 			&:after{
 				content: none;
