email redesign and changed subject line

--- a/public/frontend/css/custom.css
+++ b/public/frontend/css/custom.css
@@ -641,7 +641,9 @@ div#dob-text {
     text-align: center;
 }
 
-
+.bg-guest-banner {
+    background-color: #b0122f;
+}
 /* Button */
 
 .myButton {
