--- a/public/frontend/css/common.css
+++ b/public/frontend/css/common.css
@@ -198,11 +198,11 @@ img {
 }
 .add-btn {
   border-radius: 0 25px 25px 0;
-  padding: 7px 18px 5px 15px;
+  padding: 12px 18px;
   text-align: center;
   color: white;
   font-weight: bold;
-  font-size: 13px;
+  font-size: 14px;
 }
 .view-btn:hover,
 .add-btn:hover {
